<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/consultas"
        android:title="@string/nav_marcacoes"
        android:icon="@drawable/ic_consultas_nav"/>
    <item
        android:id="@+id/pagamentos"
        android:title="@string/nav_pagamentos"
        android:icon="@drawable/ic_pagamentos_nav"/>
    <item
        android:id="@+id/notas"
        android:title="@string/nav_notas"
        android:icon="@drawable/ic_notas_nav"/>
    <item
        android:id="@+id/perfil"
        android:title="@string/nav_perfil"
        android:icon="@drawable/ic_perfil_nav"/>
    <item
        android:id="@+id/definicoes"
        android:title="@string/nav_definicoes"
        android:icon="@drawable/ic_definicoes_nav"/>
</menu>
